@@ -2,15 +2,15 @@
 Hash: SHA256
 
 DIST echievements-2.tar.bz2 319239 SHA256 061d0f8c44406f0ff4e4d8467cc499d1b5f90debe9d8612b2e167bf454ab7aca SHA512 fdd6391e5e1724ddc153ddda369c1c4fc7ea278492994ad009bc7679c7d4322ecea46ff79cab79d80a4f09480047c3fe9ea4d2f44a66c67af187c5c136d7252e WHIRLPOOL 4afeed2c856a3e251df2ceeabec6740aa37c07e09f84eb27ecf0914da9d51dbad0ebb2422e5b58265251e1417f4fc7e813bfeca569300e86b319c8d8c044458e
-EBUILD echievements-2.ebuild 534 SHA256 84ca0c2b18ee00081de6f16effe7ba67d577e0cf1da68b05082a0291b72bd4c3 SHA512 b7e1dc75cb360a1e0b5e580b448c4e73051ce1aba42bd17867db52749a2c8ca20c24ec833d65452c2d142d6bb87465d1b99ecc191c9d046bcc36555997b9ed1e WHIRLPOOL 6a7ca2b2756f03cdde73ae5bc87a3cdacbbfe0a1d7b5929365ad4f1619fdf70f1c4980ce98501452021e67e33a682124499927b7bae9c575508faa7cd4e05419
-MISC ChangeLog 535 SHA256 36dc7776b32efe5bb87541d722c0ca4f22e3957d065c2d88090deb838c33ea09 SHA512 56acca9dc009d95c0c8b3beac535963bcf2ca049af9cee3dab2700d2eb8a67676864c7ef8fee73f4536bdc86f766e11178b341a8e1cf665ac9a83b800800dd1d WHIRLPOOL 06199774fa38df0bbc36be8eec74cb7a88ae28a093f3b0919fad1bda77e6cace1da8599c7787194e97b0558914b6091fce3affb58ac74f326c756287f8d8509d
+EBUILD echievements-2.ebuild 558 SHA256 e7b6e59ea02847d762160aad2e753eb7e418914981b5d4477abdb0966e31eb3d SHA512 dc82e0ecfeb6ef5e76f4e6810257cb492103ea2e108dffe8d657241f089bfe6645ad3693f5c84184634f55e77334e44f1484a2d5e7348f5fbea261ee0fdd45e3 WHIRLPOOL 515cdc60c0ed08c5d1b5cfd5c0b4449b1c32db96d57495f69bc3e8e7f2dc9ea2d51f6dc8b13b82b35c339df410d3e18281e0da36a3a329097afb6cf275e6d2ae
+MISC ChangeLog 666 SHA256 dd7d49d2d235b4de28592a7e5952821ee6df4fc008699ca3e3336fd75a9dd4bf SHA512 5db339aba49ae1cbad0331a21f5d48a246f212ecf3e3eaf25135df557e0feb2cf3400d5598578008a0a9a95ebfd3d9be00bcd80f28c15eca620a7a968e2ec868 WHIRLPOOL 4e4896842335b452cdfec71b08324c57e8c4e9e964eb68d260f22fc3a1b072bf8541e1fb11c22a5936e32d9909aeafdcdc90e6ac8fceb2936a692d118b629953
 MISC metadata.xml 167 SHA256 11aee3cf10a8f4d4b3f4e5ec1e4365aa03f072495bf1c367cc826347a1cb2b91 SHA512 5ea3b2ad567961ade3176c90c281aa4cc3b07d3a350b14749126a93ee2bee8fe919859ee045c0374adef2f63fcab12d914af101da165abaf5fb98fb46e423d2e WHIRLPOOL cc09ab21c5bc32cd49f7e3e2fa740a9c453a20677f5cee288715c584e303a8f8cc428d5beec9f299a88f23423012c3eabd4bd3ee766ec33f14a94798ce5bd18b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAlDUeBUACgkQG7kqcTWJkGc5mwQAyOuUqidY44zy+r1//InUuqHr
-P82GyBDI/1jrqwtIEBbKvMBJCGSj2UexLAoIZzuKzR4Imj9/nmwkRahmUXP527vt
-2GyXd3qgvaBJgkZGMBIKqF81dsdUXLYVWLrYE7t0X8YQet82uWHVFJecyerMFggO
-2H8TaWCPJQ4Y4NaQ2Dw=
-=cIe0
+iJwEAQEIAAYFAlDUzbIACgkQG7kqcTWJkGeT7AP/cFxEcoUZfPy8maJ0+1D1bIY5
++F/207PKLFhhC3X2RhyqZ0WSPJff59QxLj2zN5lSbpmJVjE8/LcbNLnIU1RvW747
+OTrF8pZaPs0uHz58DJoDb0Gv6Tm1SgOJaTtVsH31UQb6UYwfUBwSRvGoOoJ9bOkp
+1jMPFlKnfYd9IphuSWA=
+=ru++
 -----END PGP SIGNATURE-----
