@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/echievements
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/echievements/ChangeLog,v 1.2 2012/12/21 14:54:06 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/echievements/ChangeLog,v 1.3 2012/12/21 20:59:23 tommy Exp $
+
+  21 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  echievements-2.ebuild:
+  Fix license, add missing etrophy dependency
 
 *echievements-2 (21 Dec 2012)
 
